open-terminal/namespace-open-terminal.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-terminal
  labels:
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
