open-terminal/service-open-terminal.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-terminal
  namespace: open-terminal
  labels:
    app: open-terminal
    app.kubernetes.io/name: open-terminal
    app.kubernetes.io/instance: open-terminal
    app.kubernetes.io/managed-by: argoCD
spec:
  type: ClusterIP
  selector:
    app: open-terminal
  ports:
    - name: http
      port: 8000
      targetPort: http
